--- a/task8-3.html
+++ b/task8-3.html
@@ -68,15 +68,15 @@
             <li><a href="#">运营维护</a></li>
         </ol>
     </div>
-    <div class="container matt">
-    <div class="row">
+    <div class="container">
+    <div class="row row1">
         <div class="col-lg-12 headline">
             <p>前端开发方向</p>
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                     利用（X）HTML/CSS/JavaScript/
@@ -115,8 +115,8 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -162,10 +162,10 @@
                     更是远远跟不上市场发展速度。有限的iOS开发人才成了国内企业必争的资源。</p>
             </div>
         </div>
-        <div class="col-lg-4 carrer1">
+        <div class="col-lg-4 carrer2">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -207,8 +207,8 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -247,8 +247,48 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
+                    <h4>Web前端工程师</h4>
+                    <p>Web前端开发工程师，主要职责是
+                        利用（X）HTML/CSS/JavaScript/
+                        flash等各种Web技术进行产品的开
+                        发。</p>
+                </div>
+            </div>
+            <table class="table table-bordered table1">
+                <tbody>
+                <tr>
+                    <td class="grey">门槛  <img src="img/star.png"></td>
+                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                </tr>
+                <tr>
+                    <td class="grey">成长周期<span class="red">1-3</span>年</td>
+                    <td class="grey">稀缺程度<span class="red">345</span>家公司需要</td>
+                </tr>
+                <tr>
+                    <th rowspan="3" class="salary">薪资待遇</th>
+                    <td class="money"><span>0-1年</span><span>5k-10k/月</span></td>
+                </tr>
+                <tr>
+                    <td class="money3"><span>1-3年</span><span>10k-20k/月</span></td>
+                </tr>
+                <tr>
+                    <td class="money2"><span>3-5年</span><span>20k-50k/月</span></td>
+                </tr>
+                <tr>
+                    <th colspan="2">有<span class="red1">286人</span>在学</th>
+                </tr>
+                <tr>
+                    <th colspan="2" class="youneed"><p>提示:在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础</p></th>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-lg-4 carrer2">
+            <div class="headpic">
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -287,8 +327,8 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -327,48 +367,8 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
-                    <h4>Web前端工程师</h4>
-                    <p>Web前端开发工程师，主要职责是
-                        利用（X）HTML/CSS/JavaScript/
-                        flash等各种Web技术进行产品的开
-                        发。</p>
-                </div>
-            </div>
-            <table class="table table-bordered table1">
-                <tbody>
-                <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
-                </tr>
-                <tr>
-                    <td class="grey">成长周期<span class="red">1-3</span>年</td>
-                    <td class="grey">稀缺程度<span class="red">345</span>家公司需要</td>
-                </tr>
-                <tr>
-                    <th rowspan="3" class="salary">薪资待遇</th>
-                    <td class="money"><span>0-1年</span><span>5k-10k/月</span></td>
-                </tr>
-                <tr>
-                    <td class="money3"><span>1-3年</span><span>10k-20k/月</span></td>
-                </tr>
-                <tr>
-                    <td class="money2"><span>3-5年</span><span>20k-50k/月</span></td>
-                </tr>
-                <tr>
-                    <th colspan="2">有<span class="red1">286人</span>在学</th>
-                </tr>
-                <tr>
-                    <th colspan="2" class="youneed"><p>提示:在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础</p></th>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-lg-4 carrer1">
-            <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -410,8 +410,8 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -450,8 +450,8 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -488,10 +488,10 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-lg-4 carrer1">
+        <div class="col-lg-4 carrer2">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -533,8 +533,8 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <span><img src="img/head22.png"></span>
-                <div>
+                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
                         利用（X）HTML/CSS/JavaScript/
@@ -571,7 +571,6 @@
                 </tbody>
             </table>
         </div>
-
     </div>
 
 
