--- a/task2-js.html
+++ b/task2-js.html
@@ -2,63 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>vote</title>
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/hover.css">
-    <script src="js/task2.js"></script>
-    <link rel="stylesheet" href="css/task2-js.css">
-    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>选择人数</title>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/task2-js.css">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/task2.js"></script>
 </head>
 <body>
 <header><span><img src="img/Backicon.png" alt=""></span>
     <span>参数设置</span>
     <span><img src="img/circledhelp.png" alt=""></span></header>
 <main>
-    <div class="main_tp">
-    <div class="playermatch">
-        <span>玩家配比</span></div>
-    <div class="playernumber">
+    <div class="maintp">
+        <div class="left"><span>玩家配比</span></div>
+        <div class="right">
+            <div class="divide">
+                <ul></ul>
+            </div>
+            <div>
+                <button onclick="appendText()" class="btns">点击设置 <i class="fa fa-pencil"></i></button>
+            </div>
+        </div>
+    </div>
+    <div class="mainmenu">
+        <p>玩家人数 <input type="text" placeholder="18" class="number" id="test" value="10" onchange="put()">人</p>
         <div>
-            <ul>
-                <li><span class="orange"></span>杀手&#12288;1人</li>
-                <li><span class="orange"></span>杀手&#12288;1人</li>
-                <li><span class="blue"></span>医生&#12288;1人</li>
-                <li><span class="blue"></span>医生&#12288;1人</li>
-                <li><span class="orange"></span>狙击手1人</li>
-                <li><span class="orange"></span>狙击手1人</li>
-                <li><span class="blue"></span>警察&#12288;1人</li>
-                <li><span class="blue"></span>警察&#12288;1人</li>
-                <li><span class="orange"></span>警察&#12288;1人</li>
-                <li><span class="orange"></span>警察&#12288;1人</li>
-            </ul>
+            <button id="down" onclick="down()"><img src="img/down.png" alt=""></button>
+            <input type="range" id="range" oninput="change()" max="18" min="5">
+            <button id="up" onclick="up()"><img src="img/up.png" alt=""></button>
         </div>
-        <div class="set">点击设置  <i class="fa fa-pencil"></i></div>
     </div>
-    </div>
-    <div class="main_letter">
-        <ul>
-            <li>水民词组</li>
-            <li>幽灵词组</li>
-        </ul>
-    </div>
-    <div class="main_number">
-        <div>玩家人数<input type="text" placeholder="18">人</div>
-        <span><img src="img/down.png" alt=""></span>
-        <span><div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="60"
-         aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><img src="img/volume.png"  class="pull-right" alt="">
-        <span class="sr-only">40% 完成</span>
-    </div>
-        </div>
-
-
-        <span><img src="img/up.png" alt=""></span>
-        </div>
-    <button class="fapai">去发牌</button>
+    <button class="fap" onclick="task3()">发牌</button>
 
 </main>
 </body>
