--- a/task7.html
+++ b/task7.html
@@ -6,6 +6,7 @@
     <title>task7</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/task7.css"/>
+    <script src="js/task2.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -19,7 +20,7 @@
     <div class="b1 row clearfix">
         <h3 class="text-center">捉鬼游戏</h3>
                <div class="f3 col-lg-12 column">
-                   <button class="f4 btn btn-default">简化版</button><p>有1133个用户正在玩这个游戏</p>
+                   <button class="f4 btn btn-default" onclick="jump()">简化版</button><p>有1133个用户正在玩这个游戏</p>
         </div>
         <div class="f3 col-lg-12 column">
             <button class="f4 btn btn-default">猜词版</button>
