--- a/task3-js.html
+++ b/task3-js.html
@@ -8,15 +8,20 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/task3-js.css">
     <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/task3.js"></script>
+    <script src="js/task2.js"></script>
 </head>
 <body>
-<header><span><button onclick="jumpback()"></button><img src="img/Backicon.png" alt=""></span>
+<header><span><button onclick="jump()"></button><img src="img/Backicon.png" alt=""></span>
     <span>查看身份</span>
     <span><img src="img/close.png" alt=""></span></header>
 <main>
-<div><img src="img/king.png" alt=""></div>
-    <button>查看1号玩家身份</button>
+<div class="whiteside">
+        <div class="yellowbc">
+        <input type="button" value="1" id="num">
+    <div class="icon"><img src="img/myking.png" id="icon"></div>
+    </div>
+</div>
+    <input type="button" class="fanpai" value="查看一号玩家的身份" id="fanpai" onclick="fapai()">
 </main>
 </body>
 </html>
