--- a/task11.html
+++ b/task11.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <header>
-    <a href="#" class="a2">注册</a>
-    <a href="#" class="a3">登陆</a>
-    <a href="#" class="a1">关闭</a>
+    <span class="a1">关闭</span>
+    <span class="a2">登录</span>
+    <span class="a3">注册</span>
 </header>
 <main>
     <div class="content">
@@ -21,7 +21,7 @@
             <div class="login1"><input class="text" placeholder="请输入手机号"/></div>
             <div class="login1"><input class="password" placeholder="请输入密码"/></div>
             <button class="button1">登录</button>
-            <p class="code"><a href="">忘记密码</a></p>
+            <p class="code"><a href="">忘记密码?</a></p>
         </form>
     </div>
 </main>
