--- a/task4.html
+++ b/task4.html
@@ -2,26 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>login</title>
-    <link rel="stylesheet" type="text/css" href="css/task4.css"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>task11</title>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/task11.css"/>
 </head>
 <body>
 <header>
     <span class="a1">关闭</span>
-    <span class="a2">注册</span>
-    <span class="a3">登陆</span>
-    <div class="clear"></div>
+    <span class="a2">登录</span>
+    <span class="a3">注册</span>
 </header>
 <main>
-<div class="content">
-    <form class="login">
-        <div class="login1"><input type="text" placeholder="请输入手机号"/></div>
-        <div class="login1"><input type="password" placeholder="请输入密码"/></div>
-        <button class="button1">登&nbsp;&nbsp;&nbsp;&nbsp;陆</button>
-        <p class="code"><a href="">忘记密码</a></p>
-    </form>
-</div>
-   </main>
+    <div class="content">
+        <form class="login">
+            <div class="login1"><input class="text" placeholder="请输入手机号"/></div>
+            <div class="login1"><input class="password" placeholder="请输入密码"/></div>
+            <button class="button1">登录</button>
+            <p class="code"><a href="">忘记密码?</a></p>
+        </form>
+    </div>
+</main>
 </body>
 </html>
