--- a/task-12-2.html
+++ b/task-12-2.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
@@ -11,50 +12,38 @@
     <script src="http://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
 </head>
 <body>
-    <header>
-        <button class="bt1 btn btn-default">找雇主</button>
-        <button class="bt2 btn btn-default">找护工</button>
-    </header>
-    <div class="dp">
-        <div class="dp-cell">
-            <ul class="nav nav-pills nav-justified">
-                <li class="dropdown">
-                    <div class="dropdown-toggle" data-toggle="dropdown" href="#">所在地</div>
-                    <ul class="scc dropdown-menu">
-                        <li><a href="#">北京</a></li>
-                        <li><a href="#">通州</a></li>
-                        <li><a href="#">大兴</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="dp-cell">
-            <ul class="nav nav-pills nav-justified">
-                <li class="dropdown">
-                    <div class="dropdown-toggle" data-toggle="dropdown" href="#">食宿</div>
-                    <ul class="scc dropdown-menu">
-                        <li><a href="#">管吃</a></li>
-                        <li><a href="#">管住</a></li>
-                        <li><a href="#">管吃住</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="dp-cell">
-            <ul class="nav nav-pills nav-justified">
-                <li class="dropdown">
-                    <div class="dropdown-toggle" data-toggle="dropdown" href="#">病人情况</div>
-                    <ul class="scc dropdown-menu">
-                        <li><a href="#">老人</a></li>
-                        <li><a href="#">小孩</a></li>
-                        <li><a href="#">婴儿</a></li>
-                    </ul>
-                </li>
-            </ul>
+<header>
+    <button class="bt1 btn btn-default">找雇主</button>
+    <button class="bt2 btn btn-default">找护工</button>
+</header>
+<div class="dropdown1">
+    <div class="dropdown">
+        <button class="dropbtn">所在地</button>
+        <div class="dropdown-content">
+            <a href="#">北京</a>
+            <a href="#">通州</a>
+            <a href="#">果园</a>
         </div>
     </div>
-    <div class="content">
-        <ul>
+    <div class="dropdown">
+        <button class="dropbtn">所在地</button>
+        <div class="dropdown-content">
+            <a href="#">北京</a>
+            <a href="#">通州</a>
+            <a href="#">果园</a>
+        </div>
+    </div>
+    <div class="dropdown3">
+        <button class="dropbtn">所在地</button>
+        <div class="dropdown-content">
+            <a href="#">北京</a>
+            <a href="#">通州</a>
+            <a href="#">果园</a>
+        </div>
+    </div>
+</div>
+<div class="content">
+    <ul>
         <li class="textarea">
             <div class="date"><p>服务日期</p></div>
             <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
@@ -98,22 +87,24 @@
             <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
             <div class="location"><p>北京.通州.果园</p></div>
         </li>
-        </ul>
-    </div>
-    <nav class="navbar navbar-fixed-bottum" role="navigation">
-        <div class="navbar-footer">
-            <button type="button" class="btn footer_leftbutton">
-                <img src="img/home.png" alt="" class="footer leftimg">
-                <p>首页</p>
-            </button>
-            <button type="button" class="btn footer_centerbutton">
-                <img src="img/write%20(2).png" alt="" class="footer centerimg">
-            </button>
-            <button type="button" class="btn footer_rightbutton">
-                <img src="img/mine.png" alt="" class="footer rightimg">
-                <p>我的</p>
-            </button>
+    </ul>
+</div>
 
+    <footer>
+        <div class="front">
+            <img src="img/home.png" alt="">
+            <div class="text">首页</div>
         </div>
+        <div class="write">
+            <img src="img/write%20(2).png" alt="">
+        </div>
+        <div class="user">
+            <img src="img/mine.png" alt="">
+            <div class="text">我的</div>
+        </div>
+
+
+
+</footer>
 </body>
 </html>
