--- a/task-12-2.html
+++ b/task-12-2.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet/less" href="less/task-12-2.less"/>
-    <script src="http://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
+    <script src="https://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
 </head>
 <body>
 <header>
