--- a/task4-kill.html
+++ b/task4-kill.html
@@ -8,11 +8,11 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/task4.css">
     <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/task4.js"></script>
+    <script src="js/task4-kill.js"></script>
 </head>
 <body>
-<header><span><button onclick="jump()"></button><img src="img/Backicon.png" alt=""></span>
-    <span>查看身份</span>
+<header><span><button></button><img src="img/Backicon.png" alt=""></span>
+    <span>杀手杀人</span>
     <span><img src="img/close.png" alt=""></span></header>
 <div class="card">
     <ul class="content">
@@ -21,6 +21,6 @@
 
 
 </div>
-<button class="start">开始游戏</button>
+<button class="start" onclick="jump()">选中</button>
 </body>
 </html>
