--- a/task4-kill.html
+++ b/task4-kill.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header><span><button></button><img src="img/Backicon.png" alt=""></span>
-    <span>杀手杀人</span>
+    <span class="title"> 杀手杀人</span>
     <span><img src="img/close.png" alt=""></span></header>
 <div class="card">
     <ul class="content">
