--- a/CSShtml/task8.html
+++ b/CSShtml/task8.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/task8.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/task8.css"/>
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -43,7 +43,7 @@
         <div class="dp-cell">
             <ul class="nav nav-pills">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="img/holder.png"></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="../img/holder.png"></a>
                     <ul class="scc dropdown-menu">
                         <li><a href="#">关于</a></li>
                         <li><a href="#">推荐</a></li>
@@ -66,13 +66,13 @@
         <!-- 轮播（Carousel）项目 -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="img/Image.jpg" class="imgw" alt="First slide">
+                <img src="../img/Image.jpg" class="imgw" alt="First slide">
             </div>
             <div class="item">
-                <img src="img/Image.jpg" class="imgw" alt="Second slide">
+                <img src="../img/Image.jpg" class="imgw" alt="Second slide">
             </div>
             <div class="item">
-                <img src="img/Image.jpg" class="imgw" alt="Third slide">
+                <img src="../img/Image.jpg" class="imgw" alt="Third slide">
             </div>
         </div>
         <!-- 轮播（Carousel）导航 -->
@@ -221,7 +221,7 @@
             <div class="row">
                 <div class="col-md-6 col-lg-3 col-xs-12">
                     <div class="students">
-                        <img class="img-circle" src="img/Avatar.png">
+                        <img class="img-circle" src="../img/Avatar.png">
                         <span class="title">技术顾问：罗大佑</span>
                         <div>
                             <p>百度技术总监：互联网基础
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 col-xs-12">
                     <div class="students">
-                        <img class="img-circle" src="img/Avatar1.png">
+                        <img class="img-circle" src="../img/Avatar1.png">
                         <span class="title">技术顾问：罗大佑</span>
                         <div>
                             <p>百度技术总监：互联网基础
@@ -247,7 +247,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 col-xs-12">
                     <div class="students">
-                        <img class="img-circle" src="img/Avatar2.png">
+                        <img class="img-circle" src="../img/Avatar2.png">
                         <span class="title">技术顾问：罗大佑</span>
                         <div>
                             <p>百度技术总监：互联网基础
@@ -260,7 +260,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 col-xs-12">
                     <div class="students">
-                        <img class="img-circle" src="img/Avatar3.png">
+                        <img class="img-circle" src="../img/Avatar3.png">
                         <span class="title">技术顾问：罗大佑</span>
                         <div>
                             <p>百度技术总监：互联网基础
@@ -285,11 +285,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 company">
-                <span><a><img src="img/alibaba.png"></a></span>
-                <span><a><img src="img/jinshan.png"></a></span>
-                <span><a><img src="img/huanqiu.png"></a></span>
-                <span><a><img src="img/ronglian.png"></a></span>
-                <span><a><img src="img/qiniu.png"></a></span>
+                <span><a><img src="../img/alibaba.png"></a></span>
+                <span><a><img src="../img/jinshan.png"></a></span>
+                <span><a><img src="../img/huanqiu.png"></a></span>
+                <span><a><img src="../img/ronglian.png"></a></span>
+                <span><a><img src="../img/qiniu.png"></a></span>
             </div>
         </div>
     </div>
@@ -340,7 +340,7 @@
                 </div>
                 <div class="right1">
                     <p>微信公众平台</p>
-                    <span class="cc1"><img src="img/erweima.png"></span>
+                    <span class="cc1"><img src="../img/erweima.png"></span>
                 </div>
             </div>
         </div>
