--- a/CSShtml/task.html
+++ b/CSShtml/task.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div>
-    <h1>css</h1>
+    <h1>css部分</h1>
     <ol class="breadcrumb">
         <li class=""><a href="https://bradmatt213.github.io/project-1/task" class="hvr-buzz">任务一</a></li>
         <li><a href="https://bradmatt213.github.io/project-1/task" class="hvr-buzz">任务二</a></li>
@@ -29,12 +29,12 @@
         <li><a href="https://bradmatt213.github.io/learngit/CSShtml/task14" class="hvr-buzz">任务十四</a></li>
         <li><a href="https://bradmatt213.github.io/learngit/CSShtml/task14" class="hvr-buzz">任务十五</a></li>
     </ol>
-    <h1>js</h1>
+    <h1>js部分</h1>
     <ol class="breadcrumb">
         <li><a href="https://bradmatt213.github.io/learngit/CSShtml/task1" class="hvr-buzz">任务一</a></li>
-        <li><a href="https://bradmatt213.github.io/learngit/task2" class="hvr-buzz">任务二</a></li>
-        <li><a href="https://bradmatt213.github.io/learngit/CSShtml/task1" class="hvr-buzz">任务三</a></li>
-        <li><a href="https://bradmatt213.github.io/learngit/CSShtml/task1" class="hvr-buzz">任务四</a></li>
+        <li><a href="https://bradmatt213.github.io/learngit/task2-js" class="hvr-buzz">任务二</a></li>
+        <li><a href="https://bradmatt213.github.io/learngit/task3-js" class="hvr-buzz">任务三</a></li>
+        <li><a href="https://bradmatt213.github.io/learngit/task4-js" class="hvr-buzz">任务四</a></li>
     </ol>
 </div>
 </body>
