--- a/CSShtml/task1.html
+++ b/CSShtml/task1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="../css/task1.css"/>
+    <script src="../js/jquery-3.3.1.js"></script>
     <script src="../js/task1.js"></script>
 </head>
 <body>
