--- a/pratice.html
+++ b/pratice.html
@@ -5,19 +5,23 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/practice.css">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.css"/>
+    <style type="text/css">
+
+        .input-wide{
+            width: 10px;
+        }
+
+    </style>
 </head>
 <body>
-<div ng-app="myApp" ng-controller="myCtrl">
-
-</div>
-<script src="http://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
-<script src="/https://cdn.bootcss.com/jquery/3.3.0/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.js"></script>
-<script src="https://cdn.bootcss.com/bootbox.js/3.3.0/bootbox.js"></script>
-<script src="lib/state-machine.js"></script>
-<script src="js/practice.js"></script>
+<h3>DateTimePicker</h3>
+<input type="text" value="" id="datetimepicker"/><br><br>
 </body>
-</html>
+<script src="js/jquery-3.3.1.js"></script>
+<script src="js/jquery.datetimepicker.full.js"></script>
+<script>
+
+    $('#datetimepicker').datetimepicker();
+
+</script>
